some error handling + TelldusActuator reads entire actuator list